Fix icon positioning on mobile viewport

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -45,20 +45,6 @@ body {
   font-family: Outfit, 'sans-serif';
 }
 
-@media (width > 375px) {
-  .card {
-    width: 350px;
-    height: 596px;
-  }
-}
-
-@media (width <= 375px) {
-  .card {
-    width: 327px;
-    height: 543px;
-  }
-}
-
 .card-token-data {
   display: flex;
   justify-content: space-between;
@@ -76,6 +62,12 @@ body {
   --flow-width: 24px;
   --short-flow-width: calc(var(--flow-width) * 2 / 3);
   --x-short-flow-width: 7px;
+  --card-padding: 24px;
+  --card-width-desktop: 350px;
+  --card-height-desktop: 596px;
+  --card-width-mobile: 327px;
+  --card-height-mobile: 543px;
+  --view-icon-side-length: 48px;
 }
 
 .flow > * + * {
@@ -100,7 +92,8 @@ body {
   flex-direction: column;
   border-radius: 15px;
   box-shadow: 0px 25px 50px 0px rgba(0, 0, 0, 0.1);
-  padding: 24px 24px 32px 24px;
+  padding: var(--card-padding);
+  padding-bottom: 32px;
 }
 
 .card-content-image-overlay {
@@ -116,8 +109,6 @@ body {
 .card__view-icon {
   display: none;
   position: absolute;
-  top: 127px;
-  left: 127px;
 }
 
 .card__title {
@@ -204,4 +195,40 @@ body {
   left: 0;
   border-radius: 8px;
   cursor: pointer;
+}
+
+@media only screen and (width > 375px) {
+  .card {
+    width: var(--card-width-desktop);
+    height: var(--card-height-desktop);
+  }
+
+  .card__view-icon {
+    --img-side-length-desktop: calc(
+      (var(--card-width-desktop) - 2 * var(--card-padding))
+    );
+    --view-icon-offset-desktop: calc(
+      (var(--img-side-length-desktop) - var(--view-icon-side-length)) / 2
+    );
+    top: var(--view-icon-offset-desktop);
+    left: var(--view-icon-offset-desktop);
+  }
+}
+
+@media only screen and (width <= 375px) {
+  .card {
+    width: var(--card-width-mobile);
+    height: var(--card-height-mobile);
+  }
+
+  .card__view-icon {
+    --img-side-length-mobile: calc(
+      (var(--card-width-mobile) - 2 * var(--card-padding))
+    );
+    --view-icon-offset-mobile: calc(
+      (var(--img-side-length-mobile) - var(--view-icon-side-length)) / 2
+    );
+    top: var(--view-icon-offset-mobile);
+    left: var(--view-icon-offset-mobile);
+  }
 }
